--- a/Projet-html-css-exercice2/index.html
+++ b/Projet-html-css-exercice2/index.html
@@ -63,11 +63,21 @@
             <p>Aenean lacinia bibendum nulla sed consectetur. Donec sed
                 odio dui. Lorem ipsum dolor sit amet, consectetur adipiscing</p>
         </div>
-        <div class="table1">
-            <table>
+        <div>
+            <table class="table1">
                 <tr>
                     <td>
                         <div><img src="./assets/img/icon_28px_1.png"><p>Awesomeness</p></div>
+                        <p class="table_text">Aenean lacinia bibendum nulla sed consectetur.</p>
+                    </td>
+                    <td rowspan="3">
+                        <figure class="figure_table">
+                            <img class="image2" src="./assets/img/image_190px_1.png">
+                            <figcaption class="legend">PLAY.</figcaption>
+                        </figure>
+                    </td>
+                    <td>
+                        <div><img src="./assets/img/icon_28px_4.png"><p>Skills</p></div>
                         <p class="table_text">Aenean lacinia bibendum nulla sed consectetur.</p>
                     </td>
                 </tr>
@@ -76,15 +86,86 @@
                         <div><img src="./assets/img/icon_28px_2.png"><p>Pro Concept</p></div>
                         <p class="table_text">Aenean lacinia bibendum nulla sed consectetur.</p>
                     </td>
+                    <td>
+                        <div><img src="./assets/img/icon_28px_5.png"><p>Responsive</p></div>
+                        <p class="table_text">Aenean lacinia bibendum nulla sed consectetur.</p>
+                    </td>
                 </tr>
                 <tr>
                     <td>
                         <div><img src="./assets/img/icon_28px_3.png"><p>Colourfull</p></div>
                         <p class="table_text">Aenean lacinia bibendum nulla sed consectetur.</p>
                     </td>
+                    <td>
+                        <div><img src="./assets/img/icon_28px_6.png"><p>Tested</p></div>
+                        <p class="table_text">Aenean lacinia bibendum nulla sed consectetur.</p>
+                    </td>
                 </tr>
             </table>
         </div>
-
+    </section>
+    <section class="content4">
+        <div>
+            <figure>
+                <img class="avatar" src="./assets/img/avatar_91px_1.png">
+            </figure>
+        </div>
+        <div>
+            <p class="text3">Nullam quis risus eget urna mollis ornare vel eu leo. Nullam id dolor id nibh ultricies.</p>
+            <p class="nom">- JOHN DO</p>
+        </div>
+    </section>
+    <section class="content5">
+        <div>
+            <p class="text4">The best <strong>Screenshots .</strong></p>
+        </div>
+        <div class="screenshot">
+            <table class="table2">
+                <tr>
+                    <td class="ligne2"><img class="screen" src="./assets/img/image_185px_1.jpg"></td>
+                    <td class="ligne2"><img class="screen" src="./assets/img/image_185px_2.jpg"></td>
+                    <td class="ligne2"><img class="screen" src="./assets/img/image_185px_3.jpg"></td>
+                </tr>
+                <tr>
+                    <td class="figcaption">Screenshot 1</td>
+                    <td class="figcaption">Screenshot 2</td>
+                    <td class="figcaption">Screenshot 3</td>
+                </tr>
+            </table>  
+        </div>    
+    </section>
+    <section class="content6">
+        <div>
+            <table class="table3">
+                <tr>
+                    <td rowspan="3">
+                        <figure>
+                            <img class="image3" src="./assets/img/dzdzd.png">
+                        </figure>
+                    </td>
+                    <td class="colonne3">
+                        <p class="text5">Litmus <strong>Tested .</strong></p>
+                        <p class="table_text2">Aenean lacinia bibendum nulla sed consectetur. Donec sed odio dui. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu leo quam.</p>
+                        <button class="button2" type="button">See it here</button>
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <table class="table4">
+                <tr>
+                    <td>
+                        <p class="text6">100%<strong> Responsive .</strong></p>
+                        <p class="table_text2">Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Cras mattis consectetur purus sit amet fermentum. Nullam quis risus eget urna mollis ornare vel eu leo. Maecenas faucibus mollis interdum.</p>
+                        <button class="button2" type="button">Visit Website</button>
+                    </td>
+                    <td rowspan="3">
+                        <figure>
+                            <img class="image4" src="./assets/img/image_300px_2.png">
+                        </figure>
+                    </td>
+                </tr>
+            </table>
+        </div>
     </section>
 </body>
