--- a/Projet-html-css-exercice2/index.html
+++ b/Projet-html-css-exercice2/index.html
@@ -168,4 +168,46 @@
             </table>
         </div>
     </section>
+    <section class="content7">
+        <table class="table5">
+            <tr>
+                <th class="logo2">
+                    <figure>
+                        <img class="image5" src="./assets/img/SAYNA_Horizontal_-_Noir.png">
+                    </figure>
+                </th>
+                <th class="colomn2">INFO</th>
+                <th class="colomn3">CONTACT</th>
+            </tr>
+            <tr class="style">
+                <td class="colomn1" rowspan="2">Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Vestibulum id ligula porta felis euismod semper. Nullam quis risus eget urna.</td>
+                <td class="colomn2">Website</td>
+                <td class="colomn3">SAYNA SARL</td>
+            </tr>
+            <tr class="style">
+                <td class="colomn2">Features</td>
+                <td class="colomn3">Business Center 2ème étage à gauche</td>
+            </tr>
+            <tr class="style">
+                <td> </td>
+                <td class="colomn2">Appstore</td>
+                <td class="colomn3">Tanjombato 101 Antananarivo</td>
+            </tr>
+            <tr class="style">
+                <td> </td>
+                <td class="colomn2">Unsubscribe</td>
+                <td class="colomn3">NIF : 5 002 997 537</td>
+            </tr>
+            <tr class="style">
+                <td> </td>
+                <td> </td>
+                <td class="colomn3">STAT : 85497 11 2018 010389</td>
+            </tr>
+            <tr class="style">
+                <td> </td>
+                <td> </td>
+                <td class="colomn3">Madagascar</td>
+            </tr>
+        </table>
+    </section>
 </body>
