🚀 RELEASE: finalisation du footer

--- a/Projet-html-css-exercice2-sans-bootstrap/index.html
+++ b/Projet-html-css-exercice2-sans-bootstrap/index.html
@@ -11,25 +11,24 @@
 
 <body>
     <header class="header_principale">
-            <nav class="menu">
-                <a href="#">Home</a>
-                <a href="#">Features</a>
-            </nav>
-            <div class="logo">
-                <figure>
-                    <img src="./assets/img/SAYNA_Horizontal_-_Blanc.png">
-                </figure>
-            </div>
-            <nav class="menu2">
-                <a href="#">Get it Now</a>
-            </nav>
+        <nav class="menu">
+            <a href="#">Home</a>
+            <a href="#">Features</a>
+        </nav>
+        <div class="logo">
+            <figure>
+                <img src="./assets/img/SAYNA_Horizontal_-_Blanc.png">
+            </figure>
+        </div>
+        <nav class="menu2">
+            <a href="#">Get it Now</a>
+        </nav>
     </header>
     <section class="content1">
         <div class="part1">
             <h1>Promote your <strong>New App !</strong></h1>
             <h2>NEW SOFTWARE IN THE APP STORE</h2>
-            <p class="text1">Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum
-                id ligula porta felis euismod semper.</p>
+            <p class="text1">Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis euismod semper.</p>
         </div>
         <div class="part2">
             <button type="button">Buy Now</button>
@@ -60,14 +59,15 @@
     <section class="content3">
         <div>
             <p class="text2">Check Our <strong>New App .</strong></p>
-            <p>Aenean lacinia bibendum nulla sed consectetur. Donec sed
-                odio dui. Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+            <p>Aenean lacinia bibendum nulla sed consectetur. Donec sed odio dui. Lorem ipsum dolor sit amet, consectetur adipiscing</p>
         </div>
         <div>
             <table class="table1">
                 <tr>
                     <td>
-                        <div><img src="./assets/img/icon_28px_1.png"><p>Awesomeness</p></div>
+                        <div><img src="./assets/img/icon_28px_1.png">
+                            <p>Awesomeness</p>
+                        </div>
                         <p class="table_text">Aenean lacinia bibendum nulla sed consectetur.</p>
                     </td>
                     <td rowspan="3">
@@ -77,27 +77,37 @@
                         </figure>
                     </td>
                     <td>
-                        <div><img src="./assets/img/icon_28px_4.png"><p>Skills</p></div>
+                        <div><img src="./assets/img/icon_28px_4.png">
+                            <p>Skills</p>
+                        </div>
                         <p class="table_text">Aenean lacinia bibendum nulla sed consectetur.</p>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <div><img src="./assets/img/icon_28px_2.png"><p>Pro Concept</p></div>
+                        <div><img src="./assets/img/icon_28px_2.png">
+                            <p>Pro Concept</p>
+                        </div>
                         <p class="table_text">Aenean lacinia bibendum nulla sed consectetur.</p>
                     </td>
                     <td>
-                        <div><img src="./assets/img/icon_28px_5.png"><p>Responsive</p></div>
+                        <div><img src="./assets/img/icon_28px_5.png">
+                            <p>Responsive</p>
+                        </div>
                         <p class="table_text">Aenean lacinia bibendum nulla sed consectetur.</p>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <div><img src="./assets/img/icon_28px_3.png"><p>Colourfull</p></div>
+                        <div><img src="./assets/img/icon_28px_3.png">
+                            <p>Colourfull</p>
+                        </div>
                         <p class="table_text">Aenean lacinia bibendum nulla sed consectetur.</p>
                     </td>
                     <td>
-                        <div><img src="./assets/img/icon_28px_6.png"><p>Tested</p></div>
+                        <div><img src="./assets/img/icon_28px_6.png">
+                            <p>Tested</p>
+                        </div>
                         <p class="table_text">Aenean lacinia bibendum nulla sed consectetur.</p>
                     </td>
                 </tr>
@@ -131,8 +141,8 @@
                     <td class="figcaption">Screenshot 2</td>
                     <td class="figcaption">Screenshot 3</td>
                 </tr>
-            </table>  
-        </div>    
+            </table>
+        </div>
     </section>
     <section class="content6">
         <div>
@@ -156,7 +166,8 @@
                 <tr>
                     <td>
                         <p class="text6">100%<strong> Responsive .</strong></p>
-                        <p class="table_text2">Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Cras mattis consectetur purus sit amet fermentum. Nullam quis risus eget urna mollis ornare vel eu leo. Maecenas faucibus mollis interdum.</p>
+                        <p class="table_text2">Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Cras mattis consectetur purus sit amet
+                            fermentum. Nullam quis risus eget urna mollis ornare vel eu leo. Maecenas faucibus mollis interdum.</p>
                         <button class="button2" type="button">Visit Website</button>
                     </td>
                     <td rowspan="3">
@@ -210,4 +221,17 @@
             </tr>
         </table>
     </section>
+    <footer>
+        <div class="footer-text">
+            <p>©Copyright Ylane 2022 - All Rights Reserved</p>
+        </div>
+        <div>
+            <figure class="footer-image">
+                <img class="footer-icon" src="./assets/img/social_icon_19px_1.png">
+                <img class="footer-icon" src="./assets/img/social_icon_19px_2.png">
+                <img class="footer-icon" src="./assets/img/social_icon_19px_3.png">
+                <img class="footer-icon" src="./assets/img/social_icon_19px_4.png">
+            </figure>
+        </div>
+    </footer>
 </body>
