--- a/Projet-html-css-exercice2-sans-bootstrap/index.html
+++ b/Projet-html-css-exercice2-sans-bootstrap/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="fr">
-
-<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,8 +13,8 @@
             <a href="#">Home</a>
             <a href="#">Features</a>
         </nav>
-        <div class="logo">
-            <figure>
+        <div class="logo" style="text-align: center;" >
+            <figure style="text-align: center;">
                 <img src="./assets/img/SAYNA_Horizontal_-_Blanc.png">
             </figure>
         </div>
@@ -39,7 +37,7 @@
             </figure>
         </div>
     </section>
-    <section class="content2">
+	<section class="content2">
         <div>
             <figure>
                 <img class="social_icon1" src="./assets/img/social_icon1.png">
@@ -56,65 +54,48 @@
             <h2>SOCIAL MEDIA OPTION</h2>
         </div>
     </section>
-    <section class="content3">
+	 <section class="content3">
         <div>
-            <p class="text2">Check Our <strong>New App .</strong></p>
+            <h1 class="titre2">Check Our <strong>New App .</strong></h1>
             <p>Aenean lacinia bibendum nulla sed consectetur. Donec sed odio dui. Lorem ipsum dolor sit amet, consectetur adipiscing</p>
         </div>
-        <div>
-            <table class="table1">
-                <tr>
-                    <td>
-                        <div><img src="./assets/img/icon_28px_1.png">
-                            <p>Awesomeness</p>
-                        </div>
-                        <p class="table_text">Aenean lacinia bibendum nulla sed consectetur.</p>
-                    </td>
-                    <td rowspan="3">
-                        <figure class="figure_table">
-                            <img class="image2" src="./assets/img/image_190px_1.png">
-                            <figcaption class="legend">PLAY.</figcaption>
-                        </figure>
-                    </td>
-                    <td>
-                        <div><img src="./assets/img/icon_28px_4.png">
-                            <p>Skills</p>
-                        </div>
-                        <p class="table_text">Aenean lacinia bibendum nulla sed consectetur.</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <div><img src="./assets/img/icon_28px_2.png">
-                            <p>Pro Concept</p>
-                        </div>
-                        <p class="table_text">Aenean lacinia bibendum nulla sed consectetur.</p>
-                    </td>
-                    <td>
-                        <div><img src="./assets/img/icon_28px_5.png">
-                            <p>Responsive</p>
-                        </div>
-                        <p class="table_text">Aenean lacinia bibendum nulla sed consectetur.</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <div><img src="./assets/img/icon_28px_3.png">
-                            <p>Colourfull</p>
-                        </div>
-                        <p class="table_text">Aenean lacinia bibendum nulla sed consectetur.</p>
-                    </td>
-                    <td>
-                        <div><img src="./assets/img/icon_28px_6.png">
-                            <p>Tested</p>
-                        </div>
-                        <p class="table_text">Aenean lacinia bibendum nulla sed consectetur.</p>
-                    </td>
-                </tr>
-            </table>
-        </div>
-    </section>
-    <section class="content4">
+		<div class="part2">
+			<div class="col1">
+				<div >
+					<h4 class="list1"><img class="icon" src="./assets/img/icon_28px_1.png">Awesomeness</h4>
+					<p>Aenean lacinia bibendum nulla sed consectetur.</p>
+				</div>
+				<div>
+					<h4 class="list1"><img class="icon" src="./assets/img/icon_28px_2.png">Pro Concept</h4>
+					<p>Aenean lacinia bibendum nulla sed consectetur.</p>
+				</div>
+				<div>
+					<h4 class="list1"><img class="icon" src="./assets/img/icon_28px_3.png">Colourfull</h4>
+					<p>Aenean lacinia bibendum nulla sed consectetur.</p>
+				</div>
+			</div>
+			<div class="col2">
+				<figure class="image-content2">
+					<img class="image2" src="./assets/img/image_190px_1.png">
+				</figure>
+			</div>
+			<div class="col3">
+				<div>
+					<h4 class="list2"><img class="icon2" src="./assets/img/icon_28px_4.png">Skills</h4>
+					<p>Aenean lacinia bibendum nulla sed consectetur.</p>
+				</div>
+				<div>
+					<h4 class="list2"><img class="icon2" src="./assets/img/icon_28px_5.png">Responsive</h4>
+					<p>Aenean lacinia bibendum nulla sed consectetur.</p>
+				</div>
+				<div>
+					<h4 class="list2"><img class="icon2" src="./assets/img/icon_28px_6.png">Tested</h4>
+					<p>Aenean lacinia bibendum nulla sed consectetur.</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="content4">
         <div>
             <figure>
                 <img class="avatar" src="./assets/img/avatar_91px_1.png">
@@ -122,116 +103,105 @@
         </div>
         <div>
             <p class="text3">Nullam quis risus eget urna mollis ornare vel eu leo. Nullam id dolor id nibh ultricies.</p>
-            <p class="nom">- JOHN DO</p>
+            <h2>- JOHN DO</h2>
         </div>
     </section>
-    <section class="content5">
+	<section class="content5">
+		<div>
+			<div>
+				<h1 class="titre3">The best <strong>Screenshots .</strong></h1>
+			</div>
+			<div class="screenshot">
+				<div style="text-align: center;">
+					<figure style="text-align: center;">
+						<img class="screen" style="width: 130%;" src="./assets/img/image_185px_1.jpg">
+						<figcaption>Screenshot 1</figcaption>
+					</figure>
+				</div>
+				<div style="text-align: center;">
+					<figure style="text-align: center;">
+						<img class="screen" style="width: 130%;" src="./assets/img/image_185px_1.jpg">
+						<figcaption>Screenshot 2</figcaption>
+					</figure>
+				</div ;>
+				<div style="text-align: center;">
+					<figure style="text-align: center;">
+						<img class="screen" style="width: 130%;" src="./assets/img/image_185px_1.jpg">
+						<figcaption>Screenshot 3</figcaption>
+					</figure>
+				</div>
+		
+			</div>
+		</div>
+	</section>
+	<section class="content6">
         <div>
-            <p class="text4">The best <strong>Screenshots .</strong></p>
-        </div>
-        <div class="screenshot">
-            <table class="table2">
-                <tr>
-                    <td class="ligne2"><img class="screen" src="./assets/img/image_185px_1.jpg"></td>
-                    <td class="ligne2"><img class="screen" src="./assets/img/image_185px_2.jpg"></td>
-                    <td class="ligne2"><img class="screen" src="./assets/img/image_185px_3.jpg"></td>
-                </tr>
-                <tr>
-                    <td class="figcaption">Screenshot 1</td>
-                    <td class="figcaption">Screenshot 2</td>
-                    <td class="figcaption">Screenshot 3</td>
-                </tr>
-            </table>
-        </div>
-    </section>
-    <section class="content6">
-        <div>
-            <table class="table3">
-                <tr>
-                    <td rowspan="3">
-                        <figure>
-                            <img class="image3" src="./assets/img/dzdzd.png">
-                        </figure>
-                    </td>
-                    <td class="colonne3">
-                        <p class="text5">Litmus <strong>Tested .</strong></p>
-                        <p class="table_text2">Aenean lacinia bibendum nulla sed consectetur. Donec sed odio dui. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu leo quam.</p>
-                        <button class="button2" type="button">See it here</button>
-                    </td>
-                </tr>
-            </table>
-        </div>
-        <div>
-            <table class="table4">
-                <tr>
-                    <td>
-                        <p class="text6">100%<strong> Responsive .</strong></p>
-                        <p class="table_text2">Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Cras mattis consectetur purus sit amet
-                            fermentum. Nullam quis risus eget urna mollis ornare vel eu leo. Maecenas faucibus mollis interdum.</p>
-                        <button class="button2" type="button">Visit Website</button>
-                    </td>
-                    <td rowspan="3">
-                        <figure>
-                            <img class="image4" src="./assets/img/image_300px_2.png">
-                        </figure>
-                    </td>
-                </tr>
-            </table>
-        </div>
-    </section>
-    <section class="content7">
-        <table class="table5">
-            <tr>
-                <th class="logo2">
-                    <figure>
-                        <img class="image5" src="./assets/img/SAYNA_Horizontal_-_Noir.png">
-                    </figure>
-                </th>
-                <th class="colomn2">INFO</th>
-                <th class="colomn3">CONTACT</th>
-            </tr>
-            <tr class="style">
-                <td class="colomn1" rowspan="2">Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Vestibulum id ligula porta felis euismod semper. Nullam quis risus eget urna.</td>
-                <td class="colomn2">Website</td>
-                <td class="colomn3">SAYNA SARL</td>
-            </tr>
-            <tr class="style">
-                <td class="colomn2">Features</td>
-                <td class="colomn3">Business Center 2ème étage à gauche</td>
-            </tr>
-            <tr class="style">
-                <td> </td>
-                <td class="colomn2">Appstore</td>
-                <td class="colomn3">Tanjombato 101 Antananarivo</td>
-            </tr>
-            <tr class="style">
-                <td> </td>
-                <td class="colomn2">Unsubscribe</td>
-                <td class="colomn3">NIF : 5 002 997 537</td>
-            </tr>
-            <tr class="style">
-                <td> </td>
-                <td> </td>
-                <td class="colomn3">STAT : 85497 11 2018 010389</td>
-            </tr>
-            <tr class="style">
-                <td> </td>
-                <td> </td>
-                <td class="colomn3">Madagascar</td>
-            </tr>
-        </table>
-    </section>
-    <footer>
-        <div class="footer-text">
-            <p>©Copyright Ylane 2022 - All Rights Reserved</p>
-        </div>
-        <div>
-            <figure class="footer-image">
-                <img class="footer-icon" src="./assets/img/social_icon_19px_1.png">
-                <img class="footer-icon" src="./assets/img/social_icon_19px_2.png">
-                <img class="footer-icon" src="./assets/img/social_icon_19px_3.png">
-                <img class="footer-icon" src="./assets/img/social_icon_19px_4.png">
-            </figure>
-        </div>
+			<div class="part1">
+				<div style="width: 50%">
+					<figure>
+						<img style="width: auto;" src="./assets/img/dzdzd.png">
+					<figure>
+				</div>
+				<div style="width: 50%; padding-left: 10%">
+					<h1 style="padding-top:3%;" class="titre4">Litmus <strong>Tested .</strong></h1>
+                    <p style="text-align:left; width: 50%; padding-top:3%;">Aenean lacinia bibendum nulla sed consectetur. Donec sed odio dui. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu leo quam.</p>
+                    <div style="text-align:left; padding-top:3%;"><button class="button2" type="button">See it here</button></div>
+				</div>
+			</div>
+			<div style="padding-top: 4%;"class="part2">
+				<div style="width: 50%" >
+					<figure>
+						<img style="width: auto" src="./assets/img/image_300px_2.png">
+					<figure>
+				</div>
+				<div style="width: 50%">
+					<h1 style="padding-top:4%;" class="titre4">100% <strong>Responsive .</strong></h1>
+                    <p style="text-align:left; width: 50%; padding-top:4%;">Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Cras mattis consectetur purus sit amet fermentum. Nullam quis risus eget urna mollis ornare vel eu leo. Maecenas faucibus mollis interdum.</p>
+                    <div style="padding-top:4%;"><button class="button2" type="button">Visit Website</button></div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="content7">
+		<div class="container">
+			<div class="sayna" style="width: 30%">
+				<figure style="margin: 0;">
+					<img src="./assets/img/SAYNA_Horizontal_-_Noir.png">
+				</figure>	
+				<p style="width: 65%">Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Vestibulum id ligula porta felis euismod semper. Nullam quis risus eget urna.</p>
+			</div>
+			<div class="info" style="width: 15%">
+				<h6 style="font-weight: bold  !important; ">INFO</h6>
+				<p>Website</p>
+				<p>Features</p>
+				<p>Appstore</p>
+				<p>Unsubscribe</p>
+			</div>
+			<div class="contact" style="width: 20%">
+				<h6 style="font-weight: bold !important;">CONTACT</h6>
+				<p>SAYNA SARL</p>
+				<p>Business Center 2ème étage à gauche</p>
+				<p>Tanjombato 101 Antananarivo</p>
+				<p>NIF : 5 002 997 537</p>
+				<p>STAT : 85497 11 2018 010389</p>
+				<p>Madagascar</p>
+			</div>
+		</div>
+	</section>
+	<footer>
+		<div class="footer">
+			<div  style="width: 50%"class="footer-text">
+				<p style="margin: 0";>©Copyright Ylane 2022 - All Rights Reserved</p>
+			</div>
+			<div style="width: 50%" class="footer-image">
+				<figure >
+					<img class="footer-icon" src="./assets/img/social_icon_19px_1.png">
+					<img class="footer-icon" src="./assets/img/social_icon_19px_2.png">
+					<img class="footer-icon" src="./assets/img/social_icon_19px_3.png">
+					<img class="footer-icon" src="./assets/img/social_icon_19px_4.png">
+				</figure>
+			</div>
+		</div>
     </footer>
 </body>
+            
